# JavaSerial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
java/: com_manus_JavaSerialLib.c  com_manus_JavaSerialLib.h
java/com/manus/: JavaSerialLib.java
plataforms/: README.md  plataforms.h
plataforms/unix/: SerialUnix.c  SerialUnix.h
plataforms/win32/: SerialWin32.c  SerialWin32.h
src/: Serial.c  Serial.h  Sleep.h
